
* bidi is a helper function to implement icons that are different between LTR and RTL text. 

* buffer-reset-export advises LyX to remove the auxiliary files before doing the next
  export.

* buffer-write-as-template is a new convenience function to ease saving a document
  in the (personal) templates folder.

* export-cancel: Used to cancel background export processes.

* ifrelatives is a helper function to check whether a buffer has a master or children.

* lyxfiles-open opens the new examples or templates dialog.

* master-buffer-forall executes an lfun in the master and all children of a document.

* paragraph-select is a new convenience function to select the paragraph
  surrounding the actual cursor position.

* search-string-set [arg] stores the <arg>, the currently selected text or the word under
  cursor in the search cache that is used by word-find[-backward|-forward] if no argument
  is given to those.

* inset-split is a new convenience function that splits an inset into two at the given
  cursor position. This is only implemented for text insets currently.

* tabular-style-insert: Insert a table in a specified style.


!!!The following LyX functions have been changed in 2.4:

* set-graphics-group was renamed to graphics-set-group.

* info-insert buffer vcs-*: renamed to info-insert vcs *

* file-insert: optional second parameter "ignorelang" to make the insertion
  ignore the inserted file's main language (and rather adapt it to the insertion
  context's language).


!!!The following LyX functions have been removed in 2.4:

* date-insert: obsoleted by info-insert date.

!!!The following LyX function has been added and then removed in 2.4 development cycle.

* bidi: used as a first solution to provide icons that change
  direction with language.


!!!The following LyX documents have been moved in 2.4:

* As a result of a major restructuring of the templates and example
  directories, almost all examples and templates files have been renamed and