@@ -496,6 +496,7 @@ enum FuncCode
 	LFUN_INSET_SPLIT,               // jspitzm 20201222
 	LFUN_LYXFILES_OPEN,             // jspitzm 20210210
 	LFUN_SEARCH_STRING_SET,         // stwitt/jspitzm 20210212
+	LFUN_FONT_NO_SPELLCHECK,        // jspitzm 20210305
 	LFUN_LASTACTION                 // end of the table
 };
 
