@@ -862,6 +862,8 @@ void MenuDefinition::expandSpellingSuggestions(BufferView const * bv)
 				docstring const arg = wl.word() + " " + from_ascii(wl.lang()->lang());
 				add(MenuItem(MenuItem::Command, qt_("Add to personal dictionary|n"),
 						FuncRequest(LFUN_SPELLING_ADD, arg)));
+				add(MenuItem(MenuItem::Command, qt_("Ignore|g"),
+						FuncRequest(LFUN_FONT_NO_SPELLCHECK, arg)));
 				add(MenuItem(MenuItem::Command, qt_("Ignore all|I"),
 						FuncRequest(LFUN_SPELLING_IGNORE, arg)));
 			}
