@@ -100,6 +100,9 @@
 
 * export-cancel: Used to cancel background export processes.
 
+* font-nospellcheck marks the word under cursor or selection to the effect that the
+  spellchecker ignores it.
+
 * ifrelatives is a helper function to check whether a buffer has a master or children.
 
 * lyxfiles-open opens the new examples or templates dialog.
